--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,6 @@
 title: tsuideni works
 logo: /assets/img/logo.png
 theme: jekyll-theme-minimal
+github:
+  owner_url: https://github.com/tsuideni-works
+  owner_name: tsuideni works
