--- a/_config.yml
+++ b/_config.yml
@@ -3,4 +3,4 @@ logo: "/assets/img/logo.png"
 theme: jekyll-theme-minimal
 github:
   owner_url: https://github.com/tsuideni-works
-  owner_name: tsuideni works
+  owner_name: tsuideni-works
