--- a/_data/navigation-zh.yml
+++ b/_data/navigation-zh.yml
@@ -1,8 +1,12 @@
 - name: 關於
+  title: index
   link: /zh/
 - name: 使用說明
+  title: guide
   link: /zh/guide.html
 - name: 使用條款
+  title: terms
   link: /zh/terms.html
 - name: 範例
+  title: demo
   link: /zh/demo.html
