--- a/_data/language-demo.yml
+++ b/_data/language-demo.yml
@@ -1,6 +1,9 @@
 - name: 廣東話
+  code: zh-HK
   link: /zh/demo.html
 - name: 繁體中文
+  code: zh
   link: /zh/demo.html
 - name: English
+  code: en
   link: /en/demo.html
