--- a/_data/nav.yml
+++ b/_data/nav.yml
@@ -1,6 +1,42 @@
 - lang: en
-  route: en
+  route:
+    - name: About
+      title: index
+      link: /en/
+    - name: User Guide
+      title: guide
+      link: /en/guide.html
+    - name: Terms and Conditions
+      title: terms
+      link: /en/terms.html
+    - name: Demo
+      title: demo
+      link: /en/demo.html
 - lang: zh
-  route: en
+  route:
+    - name: 關於
+      title: index
+      link: /zh/
+    - name: 使用說明
+      title: guide
+      link: /zh/guide.html
+    - name: 使用條款
+      title: terms
+      link: /zh/terms.html
+    - name: 範例
+      title: demo
+      link: /zh/demo.html
 - lang: zh-HK
-  route: en
+  route:
+    - name: 關於
+      title: index
+      link: /zh-HK/
+    - name: 使用說明
+      title: guide
+      link: /zh-HK/guide.html
+    - name: 使用條款
+      title: terms
+      link: /zh-HK/terms.html
+    - name: 範例
+      title: demo
+      link: /zh-HK/demo.html
